# website

./: deploy.sh  k12a-website.cabal  site.hs
content/: index.rst
templates/: default.html
