name:                k12a-website
version:             0.1.0.0
synopsis:            Website for K12a homebrew CPU
description:         Please see README.md
homepage:            https://github.com/k12a-cpu/website#readme
license:             MIT
license-file:        LICENSE
author:              Kier Davis
maintainer:          kierdavis@gmail.com
copyright:           2016 Kier Davis
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable k12a-website
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base == 4.*,
                       hakyll == 4.7.*
